--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logoA.png" />
+    <link rel="icon" type="image/svg+xml" href="/logorep.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AWUAS</title>
+    <title>Representaciones AM 1995</title>
   </head>
   <body>
     <div id="root"></div>
